@@ -1,28 +1,33 @@
-FROM gradle:8.0-jdk17
+FROM gradle:9.2.1-jdk25
 
 WORKDIR /vertx-web-kotlinx
 COPY build.gradle.kts build.gradle.kts
 COPY settings.gradle.kts settings.gradle.kts
 COPY gradle.properties gradle.properties
 COPY src src
-RUN gradle assembleDist
-RUN tar -xf build/distributions/vertx-web-kotlinx-benchmark.tar
+RUN gradle --no-daemon installDist
 
 EXPOSE 8080
 
 CMD export JAVA_OPTS=" \
+    --enable-native-access=ALL-UNNAMED \
+    --sun-misc-unsafe-memory-access=allow \
+    --add-opens=java.base/java.lang=ALL-UNNAMED \
     -server \
     -XX:+UseNUMA \
     -XX:+UseParallelGC \
+    -XX:+UnlockDiagnosticVMOptions \
+    -XX:+DebugNonSafepoints \
+    -Djava.lang.Integer.IntegerCache.high=10000 \
     -Dvertx.disableMetrics=true \
-    -Dvertx.disableH2c=true \
     -Dvertx.disableWebsockets=true \
-    -Dvertx.flashPolicyHandler=false \
-    -Dvertx.threadChecks=false \
     -Dvertx.disableContextTimings=true \
-    -Dvertx.disableTCCL=true \
     -Dvertx.disableHttpHeadersValidation=true \
+    -Dvertx.cacheImmutableHttpResponseHeaders=true \
+    -Dvertx.internCommonHttpRequestHeadersToLowerCase=true \
+    -Dio.netty.noUnsafe=false \
     -Dio.netty.buffer.checkBounds=false \
     -Dio.netty.buffer.checkAccessible=false \
+    -Dio.netty.iouring.ringSize=16384 \
     " && \
-    vertx-web-kotlinx-benchmark/bin/vertx-web-kotlinx-benchmark false
+    build/install/vertx-web-kotlinx-benchmark/bin/vertx-web-kotlinx-benchmark false
